syntax = "proto3";

message UserMusicEvent {
    int64 timestamp = 1;
    int64 musicOffset = 2;
    string address = 3;
    string musicLink = 4;
}